fixed up some spacing on the user profile page, centered profile image

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -162,9 +162,14 @@
         flex-wrap: nowrap;
     }
     
+    .card-spacing {
+        margin-top: 16px;
+    }
+    
     .card-group>.card {
         flex: none;
         justify-content: space-between;
+        border: none;
     }
     
     .card-img,
